[package]
name = "colors"
version = "0.1.0"
authors = ["Ringo Leese <webmaster@ringoleese.de>"]
description = "A library to handle colors easyly. It can parse a string in several formats (hex, rgb, cmyk, hwb, ...) into the Color-struct, modifying (grayscale, colorize, ...) and output into several string formats."
license = "CC0-1.0"
keywords = ["color", "colors", "colour", "css", "converter"]

[dependencies]
regex = "1"
lazy_static = "1"